feat:适配AGP9.0，防抖插件

--- a/debounce-lib/build.gradle
+++ b/debounce-lib/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: "com.vanniktech.maven.publish"
 android {
     compileSdk 33
 
@@ -16,6 +15,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace "com.sunyuan.debounce.lib"
 }
 
 dependencies {
