--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.7.10"
     repositories {
-        // 阿里云 Maven 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        // 阿里云 Google Maven 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        // 阿里云 JCenter 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        //阿里云 gradlePluginPortal 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://jitpack.io' }
         google()
         mavenCentral()
         gradlePluginPortal()
-        maven { url "https://s01.oss.sonatype.org/content/groups/staging/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.22.0'
-        classpath 'io.github.sy007:debounce-plugin:2.1.5'
+        classpath 'com.android.tools.build:gradle:9.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.3.0"
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.36.0'
     }
 }
 
 //开发用
-//plugins {
-//    id "debounce-plugin" apply false
-//}
-
-
-allprojects {
-    repositories {
-        // 阿里云 Maven 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        // 阿里云 Google Maven 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        // 阿里云 JCenter 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        //阿里云 gradlePluginPortal 仓库镜像
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-        maven { url "https://s01.oss.sonatype.org/content/groups/staging/" }
-        maven { url 'https://jitpack.io' }
-    }
+plugins {
+    id "debounce-plugin" apply false
 }
 
-task clean(type: Delete) {
+
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
