--- a/debounce-plugin/build.gradle
+++ b/debounce-plugin/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-    ext.kotlin_version = "1.7.10"
     repositories {
         // 阿里云 Maven 仓库镜像
         maven { url 'https://maven.aliyun.com/repository/public' }
@@ -17,15 +16,14 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:9.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.3.0"
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.22.0'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'java-gradle-plugin'
-apply plugin: "com.vanniktech.maven.publish"
 
 repositories {
     // 阿里云 Maven 仓库镜像
@@ -44,7 +42,7 @@ repositories {
     }
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
@@ -57,36 +55,21 @@ gradlePlugin {
     }
 }
 
-gradlePlugin {
-    plugins {
-        version {
-            id = 'debounce-plugin'
-            implementationClass = 'com.sunyuan.click.debounce.DebouncePlugin'
-        }
-    }
-}
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
 
-compileKotlin {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
-}
 
-compileTestKotlin {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
-}
+
 
 dependencies {
     //使用项目中指定的gradle wrapper版本，插件中使用的Project对象等等就来自这里
     implementation gradleApi()
     //使用本地的groovy
     implementation localGroovy()
-    implementation 'org.ow2.asm:asm:7.3.1'
-    implementation 'org.ow2.asm:asm-util:7.3.1'
-    implementation 'org.ow2.asm:asm-commons:7.3.1'
-    compileOnly 'com.android.tools.build:gradle:7.4.2'
-    implementation 'com.android.tools:sdklib:26.0.0'
-    implementation "org.apache.commons:commons-compress:1.21"
-    implementation "com.didiglobal.booster:booster-kotlinx:4.6.0"
+    implementation 'org.ow2.asm:asm:9.9.1'
+    implementation 'org.ow2.asm:asm-util:9.9.1'
+    implementation 'org.ow2.asm:asm-commons:9.9.1'
+    compileOnly 'com.android.tools.build:gradle:9.0.0'
+    implementation 'com.android.tools:sdklib:31.13.2'
+    implementation "org.apache.commons:commons-compress:1.28.0"
+    implementation "com.didiglobal.booster:booster-kotlinx:5.1.0"
 }
