--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,55 @@
+
+//include ':simple-lib'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        // 阿里云 Maven 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        // 阿里云 Google Maven 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        // 阿里云 JCenter 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        //阿里云 gradlePluginPortal 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        // 阿里云 Maven 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        // 阿里云 Google Maven 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        // 阿里云 JCenter 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        //阿里云 gradlePluginPortal 仓库镜像
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
+    }
+
+
+}
+
+/**
+ * ⭐ 关键：引入本地插件工程
+ */
+includeBuild("debounce-plugin")
+
+rootProject.name = "DebouncePlugin"
+
 include ':simple'
 include ':debounce-lib'
 includeBuild 'debounce-plugin'
 include ':asm-test'
-//include ':simple-lib'
