--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 apply plugin: 'debounce-plugin'
 
 android {
@@ -26,9 +25,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    kotlinOptions {
-        jvmTarget = 11
-    }
+    namespace "com.example.gradleplugin"
+
 }
 
 
@@ -47,27 +45,21 @@ debounce {
                 "**/*_ViewBinding*.class"]
 }
 
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
-}
 
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.3.0"
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation(name: 'simple-lib-release', ext: 'aar')
+    api files(
+            "libs/simple-lib-release.aar")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'io.github.sy007:debounce-lib:2.1.5'
     implementation 'com.teprinciple:updateapputilsx:2.3.0'
 //    implementation project(":debounce-lib")
-    implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.10'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 }
