--- a/debounce-plugin/build.gradle
+++ b/debounce-plugin/build.gradle
@@ -18,12 +18,14 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:9.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.3.0"
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.22.0'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.36.0'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'java-gradle-plugin'
+apply plugin: 'maven-publish'
+
 
 repositories {
     // 阿里云 Maven 仓库镜像
@@ -59,7 +61,6 @@ gradlePlugin {
 
 
 
-
 dependencies {
     //使用项目中指定的gradle wrapper版本，插件中使用的Project对象等等就来自这里
     implementation gradleApi()
@@ -73,3 +74,4 @@ dependencies {
     implementation "org.apache.commons:commons-compress:1.28.0"
     implementation "com.didiglobal.booster:booster-kotlinx:5.1.0"
 }
+apply from: "publish.gradle"
